[gd_scene load_steps=23 format=3 uid="uid://c1law8bt55up7"]

[ext_resource type="Texture2D" uid="uid://dk0wnhuwdvjrd" path="res://icon.svg" id="1_jkwb4"]
[ext_resource type="Texture2D" uid="uid://b4ac1akwmjayq" path="res://2d7605c90868f61713538af027b8c771.jpg" id="1_lnqjt"]
[ext_resource type="Script" uid="uid://dyfg265kuo7f3" path="res://Char, Projectile/Char.gd" id="2_stl8g"]
[ext_resource type="Script" uid="uid://c16kupmxlwoyr" path="res://Char, Projectile/area_2d.gd" id="2_yklb6"]
[ext_resource type="Texture2D" uid="uid://dw70sv5rfdobr" path="res://Interaction Animations (Placeholder)/Idle.png" id="3_83lm4"]
[ext_resource type="Texture2D" uid="uid://bc500a5iutu5u" path="res://Interaction Animations (Placeholder)/Walk.png" id="4_v0a3r"]
[ext_resource type="Texture2D" uid="uid://b078gakjqrgr1" path="res://Interaction Animations (Placeholder)/Run.png" id="5_c78ed"]
[ext_resource type="Texture2D" uid="uid://crradjsm7bfjo" path="res://Interaction Animations (Placeholder)/Jump.png" id="6_bqa30"]
[ext_resource type="Texture2D" uid="uid://c508w2ngvk8cs" path="res://Interaction Animations (Placeholder)/Cast.png" id="7_dckgq"]
[ext_resource type="Texture2D" uid="uid://55xwxjx756g1" path="res://Interaction Animations (Placeholder)/Attack_1.png" id="8_jmga1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnqjt"]
size = Vector2(61, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d78xs"]
size = Vector2(134, 87.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ir8iy"]
size = Vector2(7333, 128.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqns4"]
size = Vector2(41, 73)

[sub_resource type="Animation" id="Animation_imms7"]
resource_name = "Attack"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAttack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_wg81p"]
resource_name = "Cast"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteCast:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_0h7mo"]
resource_name = "Float"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteJump:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}

[sub_resource type="Animation" id="Animation_kdubu"]
resource_name = "Idle"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_d21ai"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteWalk:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteRun:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteJump:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpriteCast:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpriteAttack:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4d7sh"]
resource_name = "Run"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteRun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_rj586"]
resource_name = "Walk"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteWalk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqns4"]
_data = {
&"Attack": SubResource("Animation_imms7"),
&"Cast": SubResource("Animation_wg81p"),
&"Float": SubResource("Animation_0h7mo"),
&"Idle": SubResource("Animation_kdubu"),
&"RESET": SubResource("Animation_d21ai"),
&"Run": SubResource("Animation_4d7sh"),
&"Walk": SubResource("Animation_rj586")
}

[node name="Node2D" type="Node2D"]

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(435, 136)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D2"]
position = Vector2(31.4375, 68.1328)
scale = Vector2(0.127344, 0.089929)
texture = ExtResource("1_lnqjt")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(31, 69)
shape = SubResource("RectangleShape2D_lnqjt")

[node name="Area2D" type="Area2D" parent="StaticBody2D2"]
script = ExtResource("2_yklb6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2/Area2D"]
position = Vector2(29, 54)
shape = SubResource("RectangleShape2D_d78xs")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(-3.99994, 303.632)
scale = Vector2(57.1719, 1.10362)
texture = ExtResource("1_jkwb4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-4.5, 297.25)
shape = SubResource("RectangleShape2D_ir8iy")

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["player"]]
script = ExtResource("2_stl8g")

[node name="SpriteIdle" type="Sprite2D" parent="CharacterBody2D"]
visible = false
texture = ExtResource("3_83lm4")
hframes = 7

[node name="SpriteWalk" type="Sprite2D" parent="CharacterBody2D"]
visible = false
texture = ExtResource("4_v0a3r")
hframes = 7

[node name="SpriteRun" type="Sprite2D" parent="CharacterBody2D"]
visible = false
texture = ExtResource("5_c78ed")
hframes = 8

[node name="SpriteJump" type="Sprite2D" parent="CharacterBody2D"]
visible = false
texture = ExtResource("6_bqa30")
hframes = 9
frame = 3

[node name="SpriteCast" type="Sprite2D" parent="CharacterBody2D"]
visible = false
texture = ExtResource("7_dckgq")
hframes = 5

[node name="SpriteAttack" type="Sprite2D" parent="CharacterBody2D"]
visible = false
texture = ExtResource("8_jmga1")
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(2.5, 12.5)
shape = SubResource("RectangleShape2D_hqns4")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
zoom = Vector2(2, 2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
libraries = {
&"": SubResource("AnimationLibrary_hqns4")
}

[connection signal="body_entered" from="StaticBody2D2/Area2D" to="StaticBody2D2/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="StaticBody2D2/Area2D" to="StaticBody2D2/Area2D" method="_on_body_exited"]
